# fastapi-tortoise-template

./: LICENSE  README.md  pyproject.toml  test.db
src/: config.py  const.py  models.py  restapi_create.py  task_schedule.py
test/: create_product.py
